settime code for exercise 5

--- a/3-PowerFactory/PowerFactoryNB.ipynb
+++ b/3-PowerFactory/PowerFactoryNB.ipynb
@@ -73,7 +73,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -486,27 +486,55 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "scenarios = {'firstScenario' : ['R(1)', 'R(2)', 'R(3)', 'R(4)', 'R(5)', 'R(6)', 'R(7)','R(8)','Line(17)']}\n",
+    "for i in range(63):\n",
+    "    print(app.GetFromStudyCase('SetTime').SetTime(i))\n",
+    "    for sce_key in scenarios.keys():\n",
+    "        for line in lines:\n",
+    "            if  not line.loc_name in scenarios[sce_key ]:\n",
+    "                line.SwitchOn()\n",
+    "            else:\n",
+    "                line.SwitchOff()\n",
+    "        app.GetFromStudyCase('ComLdf').Execute()\n",
+    "        subs=app.GetCalcRelevantObjects('*.ElmTrfstat')\n",
+    "        lines=app.GetCalcRelevantObjects('*.ElmLne')\n",
+    "        feeders=app.GetCalcRelevantObjects('*.ElmFeeder')\n",
+    "        print(\"losses\" + str(total_losses(lines)))\n",
+    "        #print(\"radial\" + str(radiality_check(feeders)))\n",
+    "        #print(\"all feeded \" + str(feeded_check(subs)))\n",
+    "        ## get_graphic(\"best_conf\") activate this line if the configuration is the best configuration.\n",
+    "        # the line above is for the exercise 4.3, extracts and saves grid and geographical images of the configuration."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## To-Do: Find how to set time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "scenarios = {'firstScenario' : ['R(1)', 'R(2)', 'R(3)', 'R(4)', 'R(5)', 'R(6)', 'R(7)','R(8)','Line(9)']}\n",
-    "print(feeded_check(subs))\n",
-    "for sce_key in scenarios.keys():\n",
-    "    for line in lines:\n",
-    "        if  not line.loc_name in scenarios[sce_key ]:\n",
-    "            line.SwitchOn()\n",
-    "        else:\n",
-    "            line.SwitchOff()\n",
-    "    app.GetFromStudyCase('ComLdf').Execute()\n",
-    "    subs=app.GetCalcRelevantObjects('*.ElmTrfstat')\n",
-    "    lines=app.GetCalcRelevantObjects('*.ElmLne')\n",
-    "    feeders=app.GetCalcRelevantObjects('*.ElmFeeder')\n",
-    "    print(\"losses\" + str(total_losses(lines)))\n",
-    "    print(\"radial\" + str(radiality_check(feeders)))\n",
-    "    print(\"all feeded\" + str(feeded_check(subs)))\n",
-    "    ## get_graphic(\"best_conf\") activate this line if the configuration is the best configuration.\n",
-    "    # the line above is for the exercise 4.3, extracts and saves grid and geographical images of the configuration."
+    "for i in range(50):\n",
+    "    print(app.GetFromStudyCase('SetTime').SetTime(i))\n"
    ]
   }
  ],
