--- a/3-PowerFactory/PowerFactoryNB.ipynb
+++ b/3-PowerFactory/PowerFactoryNB.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -37,9 +37,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import powerfactory as pf\n",
@@ -71,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -92,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -113,9 +124,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "load_flow_class.Execute()"
@@ -139,11 +161,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{2: ['Trafo Substation(1)',\n",
+       "  'Trafo Substation(4)',\n",
+       "  'Trafo Substation(16)',\n",
+       "  'Trafo Substation(26)',\n",
+       "  'Trafo Substation(28)'],\n",
+       " 3: ['Trafo Substation(3)',\n",
+       "  'Trafo Substation(7)',\n",
+       "  'Trafo Substation(11)',\n",
+       "  'Trafo Substation(21)',\n",
+       "  'Trafo Substation(27)',\n",
+       "  'Trafo Substation(2)'],\n",
+       " 4: ['Trafo Substation(9)',\n",
+       "  'Trafo Substation(14)',\n",
+       "  'Trafo Substation(18)',\n",
+       "  'Trafo Substation(23)',\n",
+       "  'Trafo Substation(25)',\n",
+       "  'Trafo Substation(29)']}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "app.GetFromStudyCase('ComLdf').Execute()\n",
     "layers = {}\n",
@@ -160,9 +218,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Trafo Substation(4)\n",
+      "<l3>\\Asus.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Grid.ElmNet\\Trafo Substation(1).ElmTrfstat</l3>\n",
+      "<l3>\\Asus.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Grid.ElmNet\\Trafo Substation(3).ElmTrfstat</l3>\n",
+      "<l3>\\Asus.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Grid.ElmNet\\Trafo Substation(4).ElmTrfstat</l3>\n",
+      "<l3>\\Asus.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Grid.ElmNet\\Trafo Substation(7).ElmTrfstat</l3>\n",
+      "<l3>\\Asus.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Grid.ElmNet\\Trafo Substation(9).ElmTrfstat</l3>\n",
+      "<l3>\\Asus.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Grid.ElmNet\\Trafo Substation(11).ElmTrfstat</l3>\n",
+      "<l3>\\Asus.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Grid.ElmNet\\Trafo Substation(14).ElmTrfstat</l3>\n",
+      "<l3>\\Asus.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Grid.ElmNet\\Trafo Substation(16).ElmTrfstat</l3>\n",
+      "<l3>\\Asus.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Grid.ElmNet\\Trafo Substation(18).ElmTrfstat</l3>\n",
+      "<l3>\\Asus.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Grid.ElmNet\\Trafo Substation(23).ElmTrfstat</l3>\n",
+      "<l3>\\Asus.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Grid.ElmNet\\Trafo Substation(21).ElmTrfstat</l3>\n",
+      "<l3>\\Asus.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Grid.ElmNet\\Trafo Substation(25).ElmTrfstat</l3>\n",
+      "<l3>\\Asus.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Grid.ElmNet\\Trafo Substation(26).ElmTrfstat</l3>\n",
+      "<l3>\\Asus.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Grid.ElmNet\\Trafo Substation(27).ElmTrfstat</l3>\n",
+      "<l3>\\Asus.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Grid.ElmNet\\Trafo Substation(28).ElmTrfstat</l3>\n",
+      "<l3>\\Asus.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Grid.ElmNet\\Trafo Substation(29).ElmTrfstat</l3>\n",
+      "<l3>\\Asus.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Grid.ElmNet\\Trafo Substation(2).ElmTrfstat</l3>\n"
+     ]
+    }
+   ],
    "source": [
     "print(subs[2].loc_name)\n",
     "\n",
@@ -232,9 +315,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-1. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0.\n",
+      "  -0. -0. -0. -0. -0.]\n",
+      " [ 1. -1. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0.\n",
+      "  -0. -0. -0. -0. -0.]\n",
+      " [ 1. -0. -1. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0.\n",
+      "  -0. -0. -0. -0. -0.]\n",
+      " [ 1. -0. -0. -1. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0.\n",
+      "  -0. -0. -0. -0. -0.]\n",
+      " [ 1. -0. -0. -0. -1. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0.\n",
+      "  -0. -0. -0. -0. -0.]\n",
+      " [ 1. -0. -0. -0. -0. -1. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0.\n",
+      "  -0. -0. -0. -0. -0.]\n",
+      " [-0. -0.  1. -0. -0. -0. -1. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0.\n",
+      "  -0. -0. -0. -0. -0.]\n",
+      " [-0. -0. -0. -0. -0. -0. -0. -1. -0.  1. -0. -0. -0. -0. -0. -0. -0. -0.\n",
+      "  -0. -0. -0. -0. -0.]\n",
+      " [-0. -0. -0. -0. -0. -0. -0. -0. -1. -0. -0. -0. -0. -0. -0. -0. -0. -0.\n",
+      "  -0. -0. -0. -0.  1.]\n",
+      " [-0.  1. -0. -0. -0. -0. -0. -0. -0. -1. -0. -0. -0. -0. -0. -0. -0. -0.\n",
+      "  -0. -0. -0. -0. -0.]\n",
+      " [-0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -1.  1. -0. -0. -0. -0. -0. -0.\n",
+      "  -0. -0. -0. -0. -0.]\n",
+      " [-0. -0. -0. -0.  1. -0. -0. -0. -0. -0. -0. -1. -0. -0. -0. -0. -0. -0.\n",
+      "  -0. -0. -0. -0. -0.]\n",
+      " [-0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -1. -0. -0. -0. -0. -0.\n",
+      "  -0. -0. -0.  1. -0.]\n",
+      " [-0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0.  1. -1. -0. -0. -0. -0.\n",
+      "  -0. -0. -0. -0. -0.]\n",
+      " [-0. -0. -0.  1. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -1. -0. -0. -0.\n",
+      "  -0. -0. -0. -0. -0.]\n",
+      " [-0. -0. -0. -0. -0. -0. -0. -0. -0. -0.  1. -0. -0. -0. -0. -1. -0. -0.\n",
+      "  -0. -0. -0. -0. -0.]\n",
+      " [-0. -0. -0. -0. -0. -0.  1. -0. -0. -0. -0. -0. -0. -0. -0. -0. -1. -0.\n",
+      "  -0. -0. -0. -0. -0.]\n",
+      " [-0. -0. -0. -0. -0. -0. -0. -0. -0.  1. -0. -0. -0. -0. -0. -0. -0. -1.\n",
+      "  -0. -0. -0. -0. -0.]\n",
+      " [-0. -0. -0. -0. -0. -0. -0.  1. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0.\n",
+      "  -1. -0. -0. -0. -0.]\n",
+      " [-0. -0. -0. -0. -0. -0. -0. -0. -0. -0.  1. -0. -0. -0. -0. -0. -0. -0.\n",
+      "  -0. -1. -0. -0. -0.]\n",
+      " [-0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0.\n",
+      "  -0. -0. -1. -0.  1.]\n",
+      " [-0. -0. -0. -0. -0.  1. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0.\n",
+      "  -0. -0. -0. -1. -0.]\n",
+      " [-0. -0. -0.  1. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0.\n",
+      "  -0. -0. -0. -0. -1.]]\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "incidence_mat = np.identity(1 + 5 + 17) * -1\n",
@@ -284,9 +420,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "is_radial =  incidence_mat.sum(1).max() == 0.0\n",
     "print(is_radial)"
@@ -294,9 +438,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<powerfactory.DataObject <l1>\\Asus.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Feeders.IntFeeder\\63 KV substation_Line(2).ElmFeeder</l1>>, <powerfactory.DataObject <l1>\\Asus.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Feeders.IntFeeder\\63 KV substation_Line.ElmFeeder</l1>>, <powerfactory.DataObject <l1>\\Asus.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Feeders.IntFeeder\\63 KV substation_Line(3).ElmFeeder</l1>>, <powerfactory.DataObject <l1>\\Asus.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Feeders.IntFeeder\\63 KV substation_Line(4).ElmFeeder</l1>>, <powerfactory.DataObject <l1>\\Asus.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Feeders.IntFeeder\\63 KV substation_Line(1).ElmFeeder</l1>>]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "print(feeders)\n",
     "feeders[0].ciRadial\n"
@@ -325,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -342,9 +504,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## just to check if the normal \n",
     "radiality_check(feeders)[0]   "
@@ -359,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -377,9 +550,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "feeded_check(subs)[0]"
    ]
@@ -393,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -409,7 +593,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -424,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -477,17 +663,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "def try_scenarios(lines):\n",
-    "    scenarios = OrderedDict()\n",
-    "    scenarios['firstScenario']  = ['R(1)', 'R(2)', 'R(3)', 'Line(9)', 'R(5)', 'R(6)', 'R(7)','R(8)']\n",
-    "    scenarios['secondScenario'] = ['R(1)', 'R(2)', 'R(3)', 'R(4)', 'R(5)', 'R(6)', 'R(7)','R(8)']\n",
-    "    scenarios['thirdScenario']  = ['R(1)', 'R(2)', 'R(3)', 'R(4)', 'Line(20)', 'R(6)', 'R(7)','R(8)']\n",
-    "    scenarios['fourthScenario'] = ['R(1)', 'Line(15)', 'R(3)', 'R(4)', 'R(5)', 'R(6)', 'R(7)','R(8)']\n",
-    "    scenarios['fifthScenario']  = ['R(1)', 'Line(15)', 'Line(35)', 'R(4)', 'R(5)', 'R(6)', 'R(7)','R(8)']\n",
+    "\"\"\"\n",
+    "Debug = True prints radiality check and wheth\n",
+    "\"\"\"\n",
+    "def try_scenarios(lines, scenarios, debug = False):\n",
     "\n",
     "    loss_dict = OrderedDict() #result_table\n",
     "\n",
@@ -503,11 +688,12 @@
     "        lines=app.GetCalcRelevantObjects('*.ElmLne')\n",
     "        feeders=app.GetCalcRelevantObjects('*.ElmFeeder')\n",
     "        loss_dict[sce_key] = total_losses(lines)\n",
-    "        \"\"\" #uncomment string for debugging\n",
-    "        print(\"losses \" + str(total_losses(lines)))\n",
-    "        print(\"radial \" + str(radiality_check(feeders)))\n",
-    "        print(\"all feeded \" + str(feeded_check(subs)))\n",
-    "        \"\"\"\n",
+    "\n",
+    "        if debug == True:\n",
+    "            print(sce_key +':')\n",
+    "            print(\"radial \" + str(radiality_check(feeders)))\n",
+    "            print(\"all feeded \" + str(feeded_check(subs)) + \"\\n\")\n",
+    "        \n",
     "    loss_sorted = OrderedDict(sorted(loss_dict.items(), key = itemgetter(1), reverse = False))\n",
     "    return loss_sorted\n",
     "        #get_graphic(\"best_conf\") activate this line if the configuration is the best configuration.\n",
@@ -516,11 +702,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "OrderedDict([('secondScenario', 18.39719349348498),\n",
+       "             ('thirdScenario', 19.068243728687175),\n",
+       "             ('fourthScenario', 19.318164685374423),\n",
+       "             ('firstScenario', 19.457361482639588),\n",
+       "             ('fifthScenario', 19.754414171933647)])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "try_scenarios(lines)\n"
+    "#Define scenarios for exercise 4\n",
+    "scenarios_ex4 = OrderedDict()\n",
+    "scenarios_ex4['firstScenario']  = ['R(1)', 'R(2)', 'R(3)', 'Line(9)', 'R(5)', 'R(6)', 'R(7)','R(8)']\n",
+    "scenarios_ex4['secondScenario'] = ['R(1)', 'R(2)', 'R(3)', 'R(4)', 'R(5)', 'R(6)', 'R(7)','R(8)']\n",
+    "scenarios_ex4['thirdScenario']  = ['R(1)', 'R(2)', 'R(3)', 'R(4)', 'Line(20)', 'R(6)', 'R(7)','R(8)']\n",
+    "scenarios_ex4['fourthScenario'] = ['R(1)', 'Line(15)', 'R(3)', 'R(4)', 'R(5)', 'R(6)', 'R(7)','R(8)']\n",
+    "scenarios_ex4['fifthScenario']  = ['R(1)', 'Line(15)', 'Line(35)', 'R(4)', 'R(5)', 'R(6)', 'R(7)','R(8)']\n",
+    "\n",
+    "\n",
+    "\n",
+    "#apply them to the grid\n",
+    "try_scenarios(lines, scenarios_ex4)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## To-Do: Scenarios for exercise 6 (Line 4 is off by default)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "firstScenario:\n",
+      "radial (True, None)\n",
+      "all feeded (True, None)\n",
+      "\n",
+      "secondScenario:\n",
+      "radial (True, None)\n",
+      "all feeded (True, None)\n",
+      "\n",
+      "thirdScenario:\n",
+      "radial (True, None)\n",
+      "all feeded (True, None)\n",
+      "\n",
+      "fourthScenario:\n",
+      "radial (True, None)\n",
+      "all feeded (True, None)\n",
+      "\n",
+      "fifthScenario:\n",
+      "radial (True, None)\n",
+      "all feeded (True, None)\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "OrderedDict([('secondScenario', 25.99327173767268),\n",
+       "             ('fourthScenario', 26.91424292956213),\n",
+       "             ('fifthScenario', 27.350492416121345),\n",
+       "             ('thirdScenario', 27.94415143524997),\n",
+       "             ('firstScenario', 28.92767173929215)])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\" Define scenarios for exercise 6:\n",
+    "    - Line(4) connects  20 kV Substation 4 with trafoSubstations 9 and 17. \n",
+    "      Hence we need to find a way around, e.g., by not disabling R8.\n",
+    "    - We took configurations from exercise 4 as a basis\n",
+    "\"\"\"\n",
+    "scenarios_ex6 = OrderedDict()\n",
+    "scenarios_ex6['firstScenario']  = ['R(1)', 'R(2)', 'R(3)', 'Line(9)', 'R(5)', 'R(6)', 'R(7)', 'Line(4)']\n",
+    "scenarios_ex6['secondScenario'] = ['R(1)', 'R(2)', 'R(3)', 'R(4)', 'R(5)', 'R(6)', 'R(7)', 'Line(4)']\n",
+    "scenarios_ex6['thirdScenario']  = ['R(1)', 'R(2)', 'R(3)', 'R(4)', 'R(5)', 'R(6)', 'Line(18)', 'Line(4)']\n",
+    "scenarios_ex6['fourthScenario'] = ['R(1)', 'Line(15)', 'R(3)', 'R(4)', 'R(5)', 'R(6)', 'R(7)', 'Line(4)']\n",
+    "scenarios_ex6['fifthScenario']  = ['R(1)', 'Line(15)', 'Line(35)', 'R(4)', 'R(5)', 'R(6)', 'R(7)', 'Line(4)']\n",
+    "\n",
+    "#apply them to the grid\n",
+    "try_scenarios(lines, scenarios_ex6, debug = True)"
    ]
   },
   {
@@ -528,7 +810,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n"
+   ]
   }
  ],
  "metadata": {
