exercise 5 is done

--- a/3-PowerFactory/PowerFactoryNB.ipynb
+++ b/3-PowerFactory/PowerFactoryNB.ipynb
@@ -11,7 +11,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Group E\n",
+    "##  Very little Documentation Dani\n",
+    "Group E  \n",
     "\n",
     "Project 3 Solution IPYNB"
    ]
@@ -61,7 +62,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise 2"
+    "## Exercise 2 --> Very little Documentation Dani"
    ]
   },
   {
@@ -129,7 +130,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise 3"
+    "## Exercise 3 --> Documentation Dani"
    ]
   },
   {
@@ -319,7 +320,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise 4"
+    "## Exercise 4 --> Documentation Sasha"
    ]
   },
   {
@@ -491,6 +492,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Switch On and Off the Lines\n",
+    "\n",
+    "One should give all the lines and the lines to switch off as input, namely \"lines\" and \"scene\" respectively."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def set_scene(lines, scene):\n",
+    "    for line in lines:\n",
+    "        if  not line.loc_name in scene:\n",
+    "            line.SwitchOn()\n",
+    "        else:\n",
+    "            line.SwitchOff()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Try different scenarios"
    ]
   },
@@ -511,11 +537,9 @@
     "\n",
     "    #print(feeded_check(subs))\n",
     "    for sce_key, value in scenarios.items():\n",
-    "        for line in lines:\n",
-    "            if  not line.loc_name in scenarios[sce_key]:\n",
-    "                line.SwitchOn()\n",
-    "            else:\n",
-    "                line.SwitchOff()\n",
+    "        \n",
+    "        set_scene(lines,scenarios[sce_key]) # The scene is set\n",
+    "        \n",
     "        app.GetFromStudyCase('ComLdf').Execute()\n",
     "        subs=app.GetCalcRelevantObjects('*.ElmTrfstat')\n",
     "        lines=app.GetCalcRelevantObjects('*.ElmLne')\n",
@@ -537,7 +561,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Try Scenarios"
+    "## Define Scenarios"
    ]
   },
   {
@@ -554,19 +578,54 @@
     "scenarios_ex4['secondScenario'] = ['R(1)', 'R(2)', 'R(3)', 'R(4)', 'R(5)', 'R(6)', 'R(7)','R(8)']\n",
     "scenarios_ex4['thirdScenario']  = ['R(1)', 'R(2)', 'R(3)', 'R(4)', 'Line(20)', 'R(6)', 'R(7)','R(8)']\n",
     "scenarios_ex4['fourthScenario'] = ['R(1)', 'Line(15)', 'R(3)', 'R(4)', 'R(5)', 'R(6)', 'R(7)','R(8)']\n",
-    "scenarios_ex4['fifthScenario']  = ['R(1)', 'Line(15)', 'Line(35)', 'R(4)', 'R(5)', 'R(6)', 'R(7)','R(8)']\n",
-    "\n",
-    "\n",
-    "\n",
-    "#apply them to the grid\n",
-    "try_scenarios(lines, scenarios_ex4)\n"
+    "scenarios_ex4['fifthScenario']  = ['R(1)', 'Line(15)', 'Line(35)', 'R(4)', 'R(5)', 'R(6)', 'R(7)','R(8)']"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise 5"
+    "### Apply Scenarios to the grid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "exercise4_results = try_scenarios(lines, scenarios_ex4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Export Graphics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "best_scenario = list(exercise4_results.items())[0]\n",
+    "\n",
+    "set_scene(lines,scenarios_ex4[best_scenario[0]])\n",
+    "\n",
+    "get_graphic(\"exercise4_best_configuration\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 5 --> Documentation Ozgur"
    ]
   },
   {
@@ -584,10 +643,13 @@
    },
    "outputs": [],
    "source": [
-    "for time in range(1,25):\n",
-    "    app.GetFromStudyCase('SetTime').SetTime(time)\n",
-    "    results = try_scenarios(lines, scenarios_ex4)\n",
-    "    results[0]"
+    "for temp_time in range(1,25):\n",
+    "    app.GetFromStudyCase('SetTime').SetTime(temp_time)\n",
+    "    exercise5_results = try_scenarios(lines, scenarios_ex4)\n",
+    "    \n",
+    "    best_scenario = list(exercise5_results.items())[0]\n",
+    "    set_scene(lines,scenarios_ex4[best_scenario[0]])\n",
+    "    get_graphic(\"exercise5_best_configuration_time_\"+str(temp_time))"
    ]
   },
   {
@@ -601,7 +663,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Scenarios for exercise 6 (Line 4 is off by default)"
+    "## Scenarios for exercise 6 (Line 4 is off by default) --> documentation Dani"
    ]
   },
   {
