Add report on ipynb file

--- a/3-PowerFactory/PowerFactoryNB.ipynb
+++ b/3-PowerFactory/PowerFactoryNB.ipynb
@@ -11,10 +11,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##  Very little Documentation Dani\n",
     "Group E  \n",
     "\n",
     "Project 3 Solution IPYNB"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "DIgSILENT stands for \"__DI__gital __SI__mu__L__ation of __E__lectrical __N__e__T__works\", a software and consulting company providing engineering services in the field of electrical power systems for transmission, distribution, generation and industrial plants. PowerFactory is one of their software product which has ability to analyze transmission, distribution, and industrial electrical power systems. The main objective of this tool is to help planning and operation optimisation. In this exercise we are working with Medium Voltage distribution system structure  to implement configuration checking, planning, and optimising.\n",
+    "\n",
+    "PowerFactory have API that can have interface with python script by using “powerfactory” module. This solution enables a Python script to have access to a comprehensive range of data available in PowerFactory, including all objects, attributes, commands, and functions. To gain access to the PowerFactory environment the command GetApplication() must be added."
    ]
   },
   {
@@ -131,6 +139,13 @@
    "metadata": {},
    "source": [
     "## Exercise 3 --> Documentation Dani"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Radial network structure have characteristic of no closed loop and unique path among any pair nodes. To do radiallity visual checking, we build incidence matrix to evaluate visually whether the network is radially operated or not."
    ]
   },
   {
