Exercise 5 graphics are added

--- a/3-PowerFactory/PowerFactoryNB.ipynb
+++ b/3-PowerFactory/PowerFactoryNB.ipynb
@@ -632,7 +632,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Explain what are you doing--> Ozgur"
+    "Next lines we are changing set time to 0AM, 1AM, 2AM, 3AM... until 23PM. For each time period the costs for the pre-made scenarios in exercise 4 are calculated, using try_scenarios function. After the best configuration is decided, we activate that configuration and save graphics for that."
    ]
   },
   {
@@ -643,13 +643,38 @@
    },
    "outputs": [],
    "source": [
-    "for temp_time in range(1,25):\n",
-    "    app.GetFromStudyCase('SetTime').SetTime(temp_time)\n",
-    "    exercise5_results = try_scenarios(lines, scenarios_ex4)\n",
+    "for temp_time in range(24): #time range\n",
+    "    app.GetFromStudyCase('SetTime').SetTime(temp_time) #update the time\n",
+    "    exercise5_results = try_scenarios(lines, scenarios_ex4) # get losses for the scenarios\n",
     "    \n",
-    "    best_scenario = list(exercise5_results.items())[0]\n",
-    "    set_scene(lines,scenarios_ex4[best_scenario[0]])\n",
-    "    get_graphic(\"exercise5_best_configuration_time_\"+str(temp_time))"
+    "    best_scenario = list(exercise5_results.items())[0] #get the best scenario\n",
+    "    set_scene(lines,scenarios_ex4[best_scenario[0]])   #activate the best scenario, in order to get the graphics\n",
+    "    get_graphic(\"exercise5_best_configuration_time_\"+str(temp_time))    # export the graphics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Example Graphics\n",
+    "\n",
+    "As we have proceeded with this exercise, we already created some graphics of a scenario.\n",
+    "\n",
+    "Here is an example scenario <b>grid</b> graphics for 4 AM 01.01.2015:\n",
+    "\n",
+    "<CENTER>\n",
+    "    <img  src=\"graphics\\Exercise\\Example\\exercise5_best_configuration_time_4-2018-05-28 00.52.10.png\"/>\n",
+    "<CENTER>\n",
+    "\n",
+    "\n",
+    "\n",
+    "Here is the <b>geographical</b> graphic for the same time period:\n",
+    "\n",
+    "\n",
+    "\n",
+    "<CENTER>\n",
+    "    <img  src=\"graphics\\Exercise\\Example\\exercise5_best_configuration_time_4-2018-05-28 00.52.10-geo.png\"/>\n",
+    "<CENTER>\n"
    ]
   },
   {
