from configurations branch, 5d3672a196db0db886794583c4e736bfc48248a8 commit, the changes are applied here

--- a/3-PowerFactory/PowerFactoryNB.ipynb
+++ b/3-PowerFactory/PowerFactoryNB.ipynb
@@ -532,14 +532,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Try different scenarios"
+    "## Try different scenarios \n",
+    "\n",
+    "## 1) Write a function which tries out our defined scenarios and outputs respective network losses"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -559,7 +561,16 @@
     "        subs=app.GetCalcRelevantObjects('*.ElmTrfstat')\n",
     "        lines=app.GetCalcRelevantObjects('*.ElmLne')\n",
     "        feeders=app.GetCalcRelevantObjects('*.ElmFeeder')\n",
-    "        loss_dict[sce_key] = total_losses(lines)\n",
+    "        is_radial = radiality_check(feeders)\n",
+    "        is_feeded = feeded_check(subs)\n",
+    "        if not (is_radial[0] and is_feeded[0]):\n",
+    "            loss_dict[sce_key] = 1000000000.0\n",
+    "            print('Problem with ' + sce_key +':')\n",
+    "            print(\"radial \" + str(is_radial))\n",
+    "            print(\"all feeded \" + str(is_radial) + \"\\n\")\n",
+    "            \n",
+    "        else:\n",
+    "            loss_dict[sce_key] = total_losses(lines)  \n",
     "\n",
     "        if debug == True:\n",
     "            print(sce_key +':')\n",
@@ -587,13 +598,23 @@
    },
    "outputs": [],
    "source": [
-    "#Define scenarios for exercise 4\n",
+    "\"\"\"\n",
+    "As a base scenario, we took an example provided in the ipython help notebook: ['R(1)', 'R(2)', 'R(3)', 'R(4)', 'R(5)', 'R(6)', 'R(7)','R(8)']\n",
+    "Then we tried to look at the grid and think which lines are substitutable without the loss of network radiality\n",
+    "and leaving any of he substations disconneted from power. E.g., in the second scenario we can turn off Line(9) but leave R(4).\n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
     "scenarios_ex4 = OrderedDict()\n",
-    "scenarios_ex4['firstScenario']  = ['R(1)', 'R(2)', 'R(3)', 'Line(9)', 'R(5)', 'R(6)', 'R(7)','R(8)']\n",
-    "scenarios_ex4['secondScenario'] = ['R(1)', 'R(2)', 'R(3)', 'R(4)', 'R(5)', 'R(6)', 'R(7)','R(8)']\n",
+    "scenarios_ex4['firstScenario']  = ['R(1)', 'R(2)', 'R(3)', 'R(4)', 'R(5)', 'R(6)', 'R(7)','R(8)']\n",
+    "scenarios_ex4['secondScenario'] = ['R(1)', 'R(2)', 'R(3)', 'Line(9)', 'R(5)', 'R(6)', 'R(7)','R(8)']\n",
     "scenarios_ex4['thirdScenario']  = ['R(1)', 'R(2)', 'R(3)', 'R(4)', 'Line(20)', 'R(6)', 'R(7)','R(8)']\n",
     "scenarios_ex4['fourthScenario'] = ['R(1)', 'Line(15)', 'R(3)', 'R(4)', 'R(5)', 'R(6)', 'R(7)','R(8)']\n",
-    "scenarios_ex4['fifthScenario']  = ['R(1)', 'Line(15)', 'Line(35)', 'R(4)', 'R(5)', 'R(6)', 'R(7)','R(8)']"
+    "scenarios_ex4['fifthScenario']  = ['R(1)', 'Line(15)', 'Line(35)', 'R(4)', 'R(5)', 'R(6)', 'R(7)','R(8)']\n",
+    "scenarios_ex4['sixthScenario']  = ['R(1)', 'R(2)', 'R(3)', 'R(4)', 'Line(20)', 'R(6)', 'R(7)','Line(32)']\n",
+    "\n",
+    "#apply them to the grid\n",
+    "try_scenarios(lines, scenarios_ex4)"
    ]
   },
   {
@@ -607,7 +628,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -629,11 +650,16 @@
    },
    "outputs": [],
    "source": [
-    "best_scenario = list(exercise4_results.items())[0]\n",
+    "# try is used because maybe all the configurations provided are either non radial, or does not feed all substations.\n",
+    "try:\n",
+    "    \n",
+    "    best_scenario = list(exercise4_results.items())[0]\n",
     "\n",
-    "set_scene(lines,scenarios_ex4[best_scenario[0]])\n",
+    "    set_scene(lines,scenarios_ex4[best_scenario[0]])\n",
     "\n",
-    "get_graphic(\"exercise4_best_configuration\")"
+    "    get_graphic(\"exercise4_best_configuration\")\n",
+    "except:\n",
+    "    print(\"Error with configurations\")"
    ]
   },
   {
@@ -647,7 +673,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next lines we are changing set time to 0AM, 1AM, 2AM, 3AM... until 23PM. For each time period the costs for the pre-made scenarios in exercise 4 are calculated, using try_scenarios function. After the best configuration is decided, we activate that configuration and save graphics for that."
+    "In next lines, we are changing set time to 0AM, 1AM, 2AM, 3AM... until 23PM. For each time period the costs for the pre-made scenarios in exercise 4 are calculated, using try_scenarios function. After the best configuration is decided, we activate that configuration and save graphics for that one, for each time step."
    ]
   },
   {
@@ -716,18 +742,18 @@
    "source": [
     "\"\"\" Define scenarios for exercise 6:\n",
     "    - Line(4) connects  20 kV Substation 4 with trafoSubstations 9 and 17. \n",
-    "      Hence we need to find a way around, e.g., by not disabling R8.\n",
-    "    - We took configurations from exercise 4 as a basis\n",
+    "      Hence we need to find a way around, e.g., by not disabling R8. We should also take into account line's length and its load. \n",
+    "    - We took configurations from exercise 4 as a basis. \n",
     "\"\"\"\n",
     "scenarios_ex6 = OrderedDict()\n",
-    "scenarios_ex6['firstScenario']  = ['R(1)', 'R(2)', 'R(3)', 'Line(9)', 'R(5)', 'R(6)', 'R(7)', 'Line(4)']\n",
-    "scenarios_ex6['secondScenario'] = ['R(1)', 'R(2)', 'R(3)', 'R(4)', 'R(5)', 'R(6)', 'R(7)', 'Line(4)']\n",
+    "scenarios_ex6['firstScenario']  = ['R(1)', 'R(2)', 'R(3)', 'R(4)', 'R(5)', 'R(6)', 'R(7)', 'Line(4)']\n",
+    "scenarios_ex6['secondScenario'] = ['R(1)', 'R(2)', 'R(3)', 'Line(9)', 'R(5)', 'R(6)', 'R(7)', 'Line(4)']\n",
     "scenarios_ex6['thirdScenario']  = ['R(1)', 'R(2)', 'R(3)', 'R(4)', 'R(5)', 'R(6)', 'Line(18)', 'Line(4)']\n",
     "scenarios_ex6['fourthScenario'] = ['R(1)', 'Line(15)', 'R(3)', 'R(4)', 'R(5)', 'R(6)', 'R(7)', 'Line(4)']\n",
     "scenarios_ex6['fifthScenario']  = ['R(1)', 'Line(15)', 'Line(35)', 'R(4)', 'R(5)', 'R(6)', 'R(7)', 'Line(4)']\n",
     "\n",
     "#apply them to the grid\n",
-    "try_scenarios(lines, scenarios_ex6, debug = True)"
+    "try_scenarios(lines, scenarios_ex6)"
    ]
   },
   {
