--- a/3-PowerFactory/PowerFactoryNB.ipynb
+++ b/3-PowerFactory/PowerFactoryNB.ipynb
@@ -308,30 +308,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "is_radial =  incidence_mat.sum(1).max() == 0.0\n",
-    "print(is_radial)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "print(feeders)\n",
-    "feeders[0].ciRadial\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -520,12 +496,16 @@
    },
    "outputs": [],
    "source": [
-    "def set_scene(lines, scene):\n",
+    "def set_scene(lines, scene,broken_lines=[]):\n",
     "    for line in lines:\n",
     "        if  not line.loc_name in scene:\n",
     "            line.SwitchOn()\n",
     "        else:\n",
-    "            line.SwitchOff()"
+    "            line.SwitchOff()\n",
+    "        \n",
+    "        if line.loc_name in broken_lines:\n",
+    "            line.SwitchOff()\n",
+    "            #print(line.loc_name + \" is broken\")"
    ]
   },
   {
@@ -548,14 +528,14 @@
     "\"\"\"\n",
     "Debug = True prints radiality check and wheth\n",
     "\"\"\"\n",
-    "def try_scenarios(lines, scenarios, debug = False):\n",
+    "def try_scenarios(lines, scenarios, broken_lines = [],debug = False):\n",
     "\n",
     "    loss_dict = OrderedDict() #result_table\n",
     "\n",
     "    #print(feeded_check(subs))\n",
     "    for sce_key, value in scenarios.items():\n",
     "        \n",
-    "        set_scene(lines,scenarios[sce_key]) # The scene is set\n",
+    "        set_scene(lines,scenarios[sce_key],broken_lines) # The scene is set\n",
     "        \n",
     "        app.GetFromStudyCase('ComLdf').Execute()\n",
     "        subs=app.GetCalcRelevantObjects('*.ElmTrfstat')\n",
@@ -578,9 +558,7 @@
     "            print(\"all feeded \" + str(feeded_check(subs)) + \"\\n\")\n",
     "        \n",
     "    loss_sorted = OrderedDict(sorted(loss_dict.items(), key = itemgetter(1), reverse = False))\n",
-    "    return loss_sorted\n",
-    "        #get_graphic(\"best_conf\") activate this line if the configuration is the best configuration.\n",
-    "        # the line above is for the exercise 4.3, extracts and saves grid and geographical images of the configuration."
+    "    return loss_sorted"
    ]
   },
   {
@@ -650,16 +628,12 @@
    },
    "outputs": [],
    "source": [
-    "# try is used because maybe all the configurations provided are either non radial, or does not feed all substations.\n",
-    "try:\n",
     "    \n",
-    "    best_scenario = list(exercise4_results.items())[0]\n",
+    "best_scenario = list(exercise4_results.items())[0]\n",
     "\n",
-    "    set_scene(lines,scenarios_ex4[best_scenario[0]])\n",
+    "set_scene(lines,scenarios_ex4[best_scenario[0]])\n",
     "\n",
-    "    get_graphic(\"exercise4_best_configuration\")\n",
-    "except:\n",
-    "    print(\"Error with configurations\")"
+    "get_graphic(\"exercise4_best_configuration\")\n"
    ]
   },
   {
@@ -746,14 +720,39 @@
     "    - We took configurations from exercise 4 as a basis. \n",
     "\"\"\"\n",
     "scenarios_ex6 = OrderedDict()\n",
-    "scenarios_ex6['firstScenario']  = ['R(1)', 'R(2)', 'R(3)', 'R(4)', 'R(5)', 'R(6)', 'R(7)', 'Line(4)']\n",
-    "scenarios_ex6['secondScenario'] = ['R(1)', 'R(2)', 'R(3)', 'Line(9)', 'R(5)', 'R(6)', 'R(7)', 'Line(4)']\n",
-    "scenarios_ex6['thirdScenario']  = ['R(1)', 'R(2)', 'R(3)', 'R(4)', 'R(5)', 'R(6)', 'Line(18)', 'Line(4)']\n",
-    "scenarios_ex6['fourthScenario'] = ['R(1)', 'Line(15)', 'R(3)', 'R(4)', 'R(5)', 'R(6)', 'R(7)', 'Line(4)']\n",
-    "scenarios_ex6['fifthScenario']  = ['R(1)', 'Line(15)', 'Line(35)', 'R(4)', 'R(5)', 'R(6)', 'R(7)', 'Line(4)']\n",
+    "scenarios_ex6['firstScenario']  = ['R(1)', 'R(2)', 'R(3)', 'R(4)', 'R(5)', 'R(6)', 'R(7)']\n",
+    "scenarios_ex6['secondScenario'] = ['R(1)', 'R(2)', 'R(3)', 'Line(9)', 'R(5)', 'R(6)', 'R(7)']\n",
+    "scenarios_ex6['thirdScenario']  = ['R(1)', 'R(2)', 'R(3)', 'R(4)', 'R(5)', 'R(6)', 'Line(18)']\n",
+    "scenarios_ex6['fourthScenario'] = ['R(1)', 'Line(15)', 'R(3)', 'R(4)', 'R(5)', 'R(6)', 'R(7)']\n",
+    "scenarios_ex6['fifthScenario']  = ['R(1)', 'Line(15)', 'Line(35)', 'R(4)', 'R(5)', 'R(6)', 'R(7)']\n",
     "\n",
     "#apply them to the grid\n",
-    "try_scenarios(lines, scenarios_ex6)"
+    "try_scenarios(lines, scenarios_ex6, ['Line(4)'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Apply Scenarios to the grid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "exercise6_results = try_scenarios(lines, scenarios_ex6,['Line(4)'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Export Graphics"
    ]
   },
   {
@@ -764,7 +763,11 @@
    },
    "outputs": [],
    "source": [
-    "\n"
+    "best_scenario_6 = list(exercise6_results.items())[0]\n",
+    "\n",
+    "set_scene(lines,scenarios_ex6[best_scenario_6[0]])\n",
+    "\n",
+    "get_graphic(\"exercise6_best_configuration\")\n"
    ]
   }
  ],
